# Research

./: LICENSE  README.md  Research.cabal  Setup.hs  initdb.sql  insertData.sql  lecture.txt  research.icns  stack.yaml
.stack-work/install/x86_64-osx/lts-9.13/8.0.2/doc/: doc-index-124.html  doc-index-33.html  doc-index-46.html  doc-index-60.html  doc-index-62.html  doc-index-63.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Z.html  doc-index.html  index.html
.stack-work/install/x86_64-osx/lts-9.13/8.0.2/doc/HDBC-2.4.0.2/: Database-HDBC-ColTypes.html  Database-HDBC-DriverUtils.html  Database-HDBC-Locale.html  Database-HDBC-SqlValue.html  Database-HDBC-Statement.html  Database-HDBC-Types.html  Database-HDBC.html  HDBC.haddock  doc-index.html  index.html  mini_Database-HDBC-ColTypes.html  mini_Database-HDBC-DriverUtils.html  mini_Database-HDBC-Locale.html  mini_Database-HDBC-SqlValue.html  mini_Database-HDBC-Statement.html  mini_Database-HDBC-Types.html  mini_Database-HDBC.html
.stack-work/install/x86_64-osx/lts-9.13/8.0.2/doc/HDBC-postgresql-2.3.2.5/: Database-HDBC-PostgreSQL.html  HDBC-postgresql.haddock  HDBC-postgresql.txt  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index-Z.html  doc-index.html  index.html  mini_Database-HDBC-PostgreSQL.html
.stack-work/install/x86_64-osx/lts-9.13/8.0.2/doc/HDBC-session-0.1.1.1/: Database-HDBC-Session.html  HDBC-session.haddock  doc-index.html  index.html  mini_Database-HDBC-Session.html
.stack-work/install/x86_64-osx/lts-9.13/8.0.2/doc/Research-0.1.0.0/: Database-Record-TH-PostgreSQL.html  Database-Relational-Query-PostgreSQL.html  Library-InsertDB.html  (+48 more)
.stack-work/install/x86_64-osx/lts-9.13/8.0.2/flag-cache/: HDBC-postgresql-2.3.2.5-8DjPA5M2Phy2z1B24f9HKN  cabal-macosx-0.2.4.1-G9n5XJeAosB4sc5IKl6zJG  fgl-5.5.3.1-BBO2AKBsFGnFCFJiVxJiz  hscolour-1.24.1-8bO2w1mmWhpHwQRVjkjSBA  parsec-3.1.11-1aqiimsgq2dCv7eoaC8WuX  persistable-types-HDBC-pg-0.0.1.5-71LLYFPFMU6JOqQvxOw1VF  pqueue-1.3.2.3-9jSEp1iXLMPDpng19f6ZUU  reactive-banana-1.1.0.1-FvXclfzq4xJACD3PKFN6Op  reactive-banana-wx-1.1.1.0-FGtRe0BljXtDFNNQBDdG2i  relational-record-0.1.8.0-GC18SRHjybR3jvBJTq3GDB  split-0.2.3.2-CJl40zTyCIV16Pr60nb7CT  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  strict-0.3.2-IfIKu6GgwJkHDDJQA4k3FZ  text-postgresql-0.0.2.3-BpjRBjFRU463lQLlgsgrtG  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  wx-0.92.3.0-KU6FNMOQFkT1dV0AXT55hz  wxc-0.92.3.0-7rSQ2frk0nJK7cSQ3i1eo4  wxcore-0.92.3.0-7crw4DOSyVYLnCcwhdBKS4  wxdirect-0.92.3.0-LGjDmaXygzn4mgqM3mytpV
.stack-work/install/x86_64-osx/lts-9.13/8.0.2/pkgdb/: HDBC-postgresql-2.3.2.5-8DjPA5M2Phy2z1B24f9HKN.conf  Research-0.1.0.0-Hn4FdcrWuuOKVDFLG4379u.conf  cabal-macosx-0.2.4.1-G9n5XJeAosB4sc5IKl6zJG.conf  package.cache  reactive-banana-wx-1.1.1.0-FGtRe0BljXtDFNNQBDdG2i.conf  wx-0.92.3.0-KU6FNMOQFkT1dV0AXT55hz.conf  wxc-0.92.3.0-7rSQ2frk0nJK7cSQ3i1eo4.conf  wxcore-0.92.3.0-7crw4DOSyVYLnCcwhdBKS4.conf  wxdirect-0.92.3.0-LGjDmaXygzn4mgqM3mytpV.conf
app/: Main.hs
preparation/: Main.hs
report/: README.md
report/Abstruct/: README.md
report/Paper/: README.md
resource/Database/: research.db
src/Database/Record/TH/: PostgreSQL.hs  SQLite3.hs
src/Database/Relational/Query/: PostgreSQL.hs  SQLite3.hs
src/Database/Relations/: Course.hs  Grade.hs  Lecture.hs  Student.hs
(+905 files in other folders)
