name:                Research
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nabechan777/Research#readme
license:             BSD3
license-file:        LICENSE
author:              DaikiWatanabe
maintainer:          daiki7watanabe@gmail.com
copyright:           2017 DaikiWatanabe
category:            Web
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Library.AccessDatabase
                     , Library.Interface
                     , Library.InsertDB
                     , Database.Record.TH.PostgreSQL
                     , Database.Relational.Query.PostgreSQL
                     , Database.Relations.Course
                     , Database.Relations.Lecture
                     , Database.Relations.Student
                     , Database.Relations.Grade
  ghc-options:       -fsimpl-tick-factor=49482
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
                     , relational-record
                     , relational-query
                     , relational-query-HDBC
                     , HDBC
                     , HDBC-session
                     , HDBC-postgresql
                     , persistable-record
                     , wx
  default-language:    Haskell2010

executable Research
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Research
                     , wx
                     , cabal-macosx
                     , reactive-banana
                     , reactive-banana-wx
  default-language:    Haskell2010

executable Preparation
 hs-source-dirs:      preparation
 main-is:             Main.hs
 ghc-options:         -threaded -rtsopts -with-rtsopts=-N
 build-depends:       base
                    , Research
                    , HDBC
                    , HDBC-postgresql
                    , relational-query-HDBC
                    , HDBC-session
 default-language:    Haskell2010

test-suite Research-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Research
                     , reactive-banana
                     , reactive-banana-wx
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nabechan777/Research

custom-setup
  setup-depends:
      Cabal >=1.23
    , base >=4.7 && <5
    , cabal-macosx >=0.1 && <0.3
